# AIMD

./: .editorconfig  .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
automation/: README.md
automation/ahk/: paste_powerscribe.ahk
client-wpf/: AIMD.ReportApp.sln  README.md
client-wpf/src/AIMD.ReportApp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
client-wpf/src/AIMD.ReportApp.Tests/: AIMD.ReportApp.Tests.csproj  MainViewModelTests.cs
client-wpf/src/AIMD.ReportApp/Commands/: AsyncRelayCommand.cs  RelayCommand.cs
client-wpf/src/AIMD.ReportApp/Models/: ReportContracts.cs
client-wpf/src/AIMD.ReportApp/Services/: IReportService.cs  ReportService.cs
client-wpf/src/AIMD.ReportApp/ViewModels/: MainViewModel.cs  SectionViewModel.cs
docs/ADR/: README.md
docs/PRD/: AIMDiagnostic_Report_Builder_PRD_v3.2.md
engine/: README.md  __init__.py  app.py  models.py  pyproject.toml  requirements.txt
engine/data/: lexicon.csv
engine/data/templates/: ct_abdomen_pelvis.template.json  ct_chest.template.json  ct_chest_abdomen_pelvis.template.json
engine/pipelines/: __init__.py  build_report_from_case_filtered.py  compile_lexicon.py  parse_from_dictation_lex.py
engine/services/: __init__.py  generator.py
engine/tests/: __init__.py  test_generate_contract.py
shared/rules/: impression_rules.yaml
shared/schemas/: generate-request.schema.json  generate-response.schema.json  template.schema.json
shared/scripts/: README.md
